removed redundant space

--- a/index.html
+++ b/index.html
@@ -902,12 +902,10 @@
 
                 <p class="mb-5 text-justify">The project focusses on the detection and registration of vehicles and their number plates. The camera feed is first processed to detect the vehicle type present using YOLOv4 architecture, trained on COCO dataset and finetuned on some of our dataset. Then the number plate present is detected and segmented using a different YOLOv4 architecture, trained on a mix of OID dataset as well as some of our own. Finally, from the segmented number plate, individual characters are segmented using multiclass classification with YOLOv4, trained entirely on our dataset. The solution was then integrated with web and android application. This project was done as a problem statement provided by MixOrg Consulting Services Pvt. Ltd. under MHRD and MIC organized Smart India Hackathon, 2020 (Software Edition), where our solution secured first position and a cash prize of Rs. 1,00,000.
 
-                <h4 class=" text-secondary text-uppercase mb-0"></h4>
-                <img class="img-fluid rounded mb-5 mt-4" src="img/portfolio/cyber_number.jpg" alt="">
-                
+
                   <div class="text-center mt-2 ml-2 mr-2">
                   <a class="btn btn-l btn-outline-primary" href="https://www.youtube.com/watch?v=Y-EuzsubixI&feature=youtu.be" target="_blank">
-                    <i class="fas fa-video mr-2"></i>
+                    <i class="fas fa-code mr-2"></i>
                     Video
                   </a>
                   </div>
