--- a/index.html
+++ b/index.html
@@ -905,7 +905,7 @@
 
                   <div class="text-center mt-2 ml-2 mr-2">
                   <a class="btn btn-l btn-outline-primary" href="https://www.youtube.com/watch?v=Y-EuzsubixI&feature=youtu.be" target="_blank">
-                    <i class="fas fa-code mr-2"></i>
+                    <i class="fas fa-video mr-2"></i>
                     Video
                   </a>
                   </div>
