update website nov21

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Arihant Gaur</name>
               </p>
-              <p>I am a final year student at <a href="https://vnit.ac.in/">VNIT, Nagpur</a>. I work on 3D computer vision and deep learning on the side.
+              <p>I am a final year student at <a href="https://vnit.ac.in/">VNIT, Nagpur</a>. I am also a research intern under the guidance of Prof. <a href="https://pmiraldo.github.io/">Pedro Miraldo</a> and <a href="https://goncalo120.github.io/">Gonçalo Pais</a> at Instituto Superior Técnico (IST), Lisbon, Portugal.
               </p>
               <p style="text-align:center">
                 <a href="mailto:arihant.gaur@gmail.com">Email</a> &nbsp/&nbsp
@@ -32,26 +32,41 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/circle-photo.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/circle-photo.png" class="hoverZoomLink"></a>
+              <a href="images/my_img.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/my_img.png" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
-            <td style="padding:20px;width:100%;vertical-align:middle">
+            <td style="padding:10px;width:100%;vertical-align:middle">
               <heading>Areas of Interest</heading>
               <p>
-                I am currently working on 3D scene understanding and differentiable VO.
+                I am currently working on 3D registration, holistic scene understanding, visual odometry and domain adaptation. I have previously worked on structure from motion, image stitching and panorama, monocular visual odometry and HCI. Currently, this website is under development. For more details on my projects, please refer to my CV.
               </p>
             </td>
           </tr>
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr>
+            <td style="padding:10px;width:100%;vertical-align:middle">
+              <heading>News</heading>
+              <p>
+                <li><b> October 2021</b>: My paper "Open-Set Multi-Source Multi-Target Domain Adaptation" got accepted at the NeurIPS'21 pre - registration <a href="https://preregister.science/">workshop.</a> </li>
+                <br>
+                <li><b> May 2021</b>: Started working as a research intern at IST, Lisbon.</a> </li>
+                <br>
+                <li><b> August 2020</b>: Bagged first prize at the <a href="https://www.sih.gov.in/SoftwarefinalResult2020">Smart India Hackathon, 2020</a> (Software Edition, Team IvLabs)</li>
+              </p>
+            </td>
+          </tr>
+        </tbody></table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:0px">
               <br>
               <p style="text-align:right;font-size:small;">
-                The website template is the courtesy of <a href="https://jonbarron.info/">Jon Barron</a>. (Still developing the website)| Last Updated: 15-08-2021
+                The website template is the courtesy of <a href="https://jonbarron.info/">Jon Barron</a>. (Still developing the website)| Last Updated: 08-11-2021
               </p>
             </td>
           </tr>
