update paper link

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <td style="padding:10px;width:100%;vertical-align:middle">
               <heading>News</heading>
               <p>
-                <li><b> October 2021</b>: My paper "Open-Set Multi-Source Multi-Target Domain Adaptation" got accepted at the NeurIPS'21 pre - registration <a href="https://preregister.science/">workshop.</a> </li>
+                <li><b> October 2021</b>: My paper "Open-Set Multi-Source Multi-Target Domain Adaptation" got accepted at the NeurIPS'21 pre - registration <a href="https://preregister.science/">workshop</a>. Paper: <a href="https://preregister.science/papers_21neurips/11_paper.pdf">Link</a>, Video: <a href="https://www.youtube.com/watch?v=dflYL6WBZI4&ab_channel=preregister-ml">Link</a> </li>
                 <br>
                 <li><b> May 2021</b>: Started working as a research intern at IST, Lisbon.</a> </li>
                 <br>
@@ -66,7 +66,7 @@
             <td style="padding:0px">
               <br>
               <p style="text-align:right;font-size:small;">
-                The website template is the courtesy of <a href="https://jonbarron.info/">Jon Barron</a>. (Still developing the website)| Last Updated: 08-11-2021
+                The website template is the courtesy of <a href="https://jonbarron.info/">Jon Barron</a>. (Still developing the website)| Last Updated: 13-12-2021
               </p>
             </td>
           </tr>
